@@ -7,3 +7,7 @@
 java --module-path <PATH TO JAVAFX LIB> --add-modules=javafx.controls,javafx.fxml,javafx.media -jar Poprio.jar
 ```
 ## Building the program from source
+## Building javadoc for this project
+```
+javadoc --module-path <PATH TO JAVAFX LIB> --add-modules=javafx.controls,javafx.fxml,javafx.media ../src/**/**.java
+```
